finishing up package resource slotting and cross package class sharing